Updated module QTL, fine mapping, and CHEERS

--- a/03_Functional_Interpretation/scripts/eqtl_in_epigenetic_data.ipynb
+++ b/03_Functional_Interpretation/scripts/eqtl_in_epigenetic_data.ipynb
@@ -803,6 +803,109 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b8c4f53d-cc7d-4613-9650-89c38494543c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gene.info <- read.table(\"/nfs/team282/data/gains_team282/gene_info_864_20412_hla.txt\", sep=\"\\t\", header=T) %>%\n",
+    "    dplyr::mutate(TSS=ifelse(strand == \"+\", start, end))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d49a61c9-03c1-49d8-ab37-567cc66cd0cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 6 × 28</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>seqnames</th><th scope=col>start</th><th scope=col>end</th><th scope=col>width</th><th scope=col>strand</th><th scope=col>source</th><th scope=col>type</th><th scope=col>score</th><th scope=col>phase</th><th scope=col>gene_id</th><th scope=col>⋯</th><th scope=col>transcript_biotype</th><th scope=col>tag</th><th scope=col>transcript_support_level</th><th scope=col>exon_number</th><th scope=col>exon_id</th><th scope=col>exon_version</th><th scope=col>protein_id</th><th scope=col>protein_version</th><th scope=col>ccds_id</th><th scope=col>TSS</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>⋯</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>ENSG00000230521</th><td>6</td><td>29887294</td><td>29888268</td><td> 975</td><td>-</td><td>havana</td><td>gene</td><td>NA</td><td>NA</td><td>ENSG00000230521</td><td>⋯</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>29888268</td></tr>\n",
+       "\t<tr><th scope=row>ENSG00000225864</th><td>6</td><td>29722981</td><td>29723971</td><td> 991</td><td>-</td><td>havana</td><td>gene</td><td>NA</td><td>NA</td><td>ENSG00000225864</td><td>⋯</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>29723971</td></tr>\n",
+       "\t<tr><th scope=row>ENSG00000227766</th><td>6</td><td>29942075</td><td>29943067</td><td> 993</td><td>-</td><td>havana</td><td>gene</td><td>NA</td><td>NA</td><td>ENSG00000227766</td><td>⋯</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>29943067</td></tr>\n",
+       "\t<tr><th scope=row>ENSG00000237669</th><td>6</td><td>30006121</td><td>30007116</td><td> 996</td><td>-</td><td>havana</td><td>gene</td><td>NA</td><td>NA</td><td>ENSG00000237669</td><td>⋯</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>30007116</td></tr>\n",
+       "\t<tr><th scope=row>ENSG00000271581</th><td>6</td><td>31356647</td><td>31357637</td><td> 991</td><td>+</td><td>havana</td><td>gene</td><td>NA</td><td>NA</td><td>ENSG00000271581</td><td>⋯</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>31356647</td></tr>\n",
+       "\t<tr><th scope=row>ENSG00000285647</th><td>6</td><td>31367057</td><td>31376088</td><td>9032</td><td>+</td><td>havana</td><td>gene</td><td>NA</td><td>NA</td><td>ENSG00000285647</td><td>⋯</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>31367057</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 28\n",
+       "\\begin{tabular}{r|lllllllllllllllllllll}\n",
+       "  & seqnames & start & end & width & strand & source & type & score & phase & gene\\_id & ⋯ & transcript\\_biotype & tag & transcript\\_support\\_level & exon\\_number & exon\\_id & exon\\_version & protein\\_id & protein\\_version & ccds\\_id & TSS\\\\\n",
+       "  & <chr> & <int> & <int> & <int> & <chr> & <chr> & <chr> & <lgl> & <lgl> & <chr> & ⋯ & <lgl> & <lgl> & <lgl> & <lgl> & <lgl> & <lgl> & <lgl> & <lgl> & <lgl> & <int>\\\\\n",
+       "\\hline\n",
+       "\tENSG00000230521 & 6 & 29887294 & 29888268 &  975 & - & havana & gene & NA & NA & ENSG00000230521 & ⋯ & NA & NA & NA & NA & NA & NA & NA & NA & NA & 29888268\\\\\n",
+       "\tENSG00000225864 & 6 & 29722981 & 29723971 &  991 & - & havana & gene & NA & NA & ENSG00000225864 & ⋯ & NA & NA & NA & NA & NA & NA & NA & NA & NA & 29723971\\\\\n",
+       "\tENSG00000227766 & 6 & 29942075 & 29943067 &  993 & - & havana & gene & NA & NA & ENSG00000227766 & ⋯ & NA & NA & NA & NA & NA & NA & NA & NA & NA & 29943067\\\\\n",
+       "\tENSG00000237669 & 6 & 30006121 & 30007116 &  996 & - & havana & gene & NA & NA & ENSG00000237669 & ⋯ & NA & NA & NA & NA & NA & NA & NA & NA & NA & 30007116\\\\\n",
+       "\tENSG00000271581 & 6 & 31356647 & 31357637 &  991 & + & havana & gene & NA & NA & ENSG00000271581 & ⋯ & NA & NA & NA & NA & NA & NA & NA & NA & NA & 31356647\\\\\n",
+       "\tENSG00000285647 & 6 & 31367057 & 31376088 & 9032 & + & havana & gene & NA & NA & ENSG00000285647 & ⋯ & NA & NA & NA & NA & NA & NA & NA & NA & NA & 31367057\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 28\n",
+       "\n",
+       "| <!--/--> | seqnames &lt;chr&gt; | start &lt;int&gt; | end &lt;int&gt; | width &lt;int&gt; | strand &lt;chr&gt; | source &lt;chr&gt; | type &lt;chr&gt; | score &lt;lgl&gt; | phase &lt;lgl&gt; | gene_id &lt;chr&gt; | ⋯ ⋯ | transcript_biotype &lt;lgl&gt; | tag &lt;lgl&gt; | transcript_support_level &lt;lgl&gt; | exon_number &lt;lgl&gt; | exon_id &lt;lgl&gt; | exon_version &lt;lgl&gt; | protein_id &lt;lgl&gt; | protein_version &lt;lgl&gt; | ccds_id &lt;lgl&gt; | TSS &lt;int&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| ENSG00000230521 | 6 | 29887294 | 29888268 |  975 | - | havana | gene | NA | NA | ENSG00000230521 | ⋯ | NA | NA | NA | NA | NA | NA | NA | NA | NA | 29888268 |\n",
+       "| ENSG00000225864 | 6 | 29722981 | 29723971 |  991 | - | havana | gene | NA | NA | ENSG00000225864 | ⋯ | NA | NA | NA | NA | NA | NA | NA | NA | NA | 29723971 |\n",
+       "| ENSG00000227766 | 6 | 29942075 | 29943067 |  993 | - | havana | gene | NA | NA | ENSG00000227766 | ⋯ | NA | NA | NA | NA | NA | NA | NA | NA | NA | 29943067 |\n",
+       "| ENSG00000237669 | 6 | 30006121 | 30007116 |  996 | - | havana | gene | NA | NA | ENSG00000237669 | ⋯ | NA | NA | NA | NA | NA | NA | NA | NA | NA | 30007116 |\n",
+       "| ENSG00000271581 | 6 | 31356647 | 31357637 |  991 | + | havana | gene | NA | NA | ENSG00000271581 | ⋯ | NA | NA | NA | NA | NA | NA | NA | NA | NA | 31356647 |\n",
+       "| ENSG00000285647 | 6 | 31367057 | 31376088 | 9032 | + | havana | gene | NA | NA | ENSG00000285647 | ⋯ | NA | NA | NA | NA | NA | NA | NA | NA | NA | 31367057 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "                seqnames start    end      width strand source type score phase\n",
+       "ENSG00000230521 6        29887294 29888268  975  -      havana gene NA    NA   \n",
+       "ENSG00000225864 6        29722981 29723971  991  -      havana gene NA    NA   \n",
+       "ENSG00000227766 6        29942075 29943067  993  -      havana gene NA    NA   \n",
+       "ENSG00000237669 6        30006121 30007116  996  -      havana gene NA    NA   \n",
+       "ENSG00000271581 6        31356647 31357637  991  +      havana gene NA    NA   \n",
+       "ENSG00000285647 6        31367057 31376088 9032  +      havana gene NA    NA   \n",
+       "                gene_id         ⋯ transcript_biotype tag\n",
+       "ENSG00000230521 ENSG00000230521 ⋯ NA                 NA \n",
+       "ENSG00000225864 ENSG00000225864 ⋯ NA                 NA \n",
+       "ENSG00000227766 ENSG00000227766 ⋯ NA                 NA \n",
+       "ENSG00000237669 ENSG00000237669 ⋯ NA                 NA \n",
+       "ENSG00000271581 ENSG00000271581 ⋯ NA                 NA \n",
+       "ENSG00000285647 ENSG00000285647 ⋯ NA                 NA \n",
+       "                transcript_support_level exon_number exon_id exon_version\n",
+       "ENSG00000230521 NA                       NA          NA      NA          \n",
+       "ENSG00000225864 NA                       NA          NA      NA          \n",
+       "ENSG00000227766 NA                       NA          NA      NA          \n",
+       "ENSG00000237669 NA                       NA          NA      NA          \n",
+       "ENSG00000271581 NA                       NA          NA      NA          \n",
+       "ENSG00000285647 NA                       NA          NA      NA          \n",
+       "                protein_id protein_version ccds_id TSS     \n",
+       "ENSG00000230521 NA         NA              NA      29888268\n",
+       "ENSG00000225864 NA         NA              NA      29723971\n",
+       "ENSG00000227766 NA         NA              NA      29943067\n",
+       "ENSG00000237669 NA         NA              NA      30007116\n",
+       "ENSG00000271581 NA         NA              NA      31356647\n",
+       "ENSG00000285647 NA         NA              NA      31367057"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "head(gene.info)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1aea645e-ec22-4ef1-8224-3b61b044d33d",
    "metadata": {},
@@ -814,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "1ee075db-5407-4227-9926-d19749331bd1",
    "metadata": {},
    "outputs": [],
@@ -841,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "286354e2-ad78-45b1-85b2-f5ec0c54f01d",
    "metadata": {},
    "outputs": [
@@ -919,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "3a809217-f27a-45e4-b289-a63fbd949a0a",
    "metadata": {},
    "outputs": [],
@@ -946,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "ec530896-089d-4f00-a09a-d952c68701ef",
    "metadata": {},
    "outputs": [
@@ -1024,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "b2e7ccab-abe5-44e5-8b9f-37aefc160c55",
    "metadata": {},
    "outputs": [],
@@ -1044,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "2a15421d-50bb-41b4-8d84-e06127e12571",
    "metadata": {},
    "outputs": [
@@ -1066,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "a5f44776-d6f0-45cc-ac56-6bc41c9f76b9",
    "metadata": {},
    "outputs": [],
@@ -1081,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "d052009b-67b2-47e8-9141-3ca978f69044",
    "metadata": {},
    "outputs": [],
@@ -1103,6 +1206,137 @@
    "source": [
     "write.table(lead.snps.hg19, \"~/gains_team282/epigenetics/calderon_et_al_hg19/lead_and_tag_snps_hg19.tsv\", row.names=F, sep=\"\\t\", quote=F)\n",
     "write.table(conditional.snps.hg19, \"~/gains_team282/epigenetics/calderon_et_al_hg19/conditional_and_tag_snps_hg19.tsv\", row.names=F, sep=\"\\t\", quote=F)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fc9ff83-074d-49b4-8a8f-c4ed868c62eb",
+   "metadata": {},
+   "source": [
+    "## TSS Positions in hg19\n",
+    "\n",
+    "Downstream analysis in CHEERS requires hg19 coordinates for the 1 Mb *cis* window around the TSS. This will be used to identify peaks of interest."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "dfd4936f-d4ff-4f18-96e4-89e09091e40e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tss.regions <- gene.info %>%\n",
+    "    dplyr::select(chr=seqnames, TSS) %>%\n",
+    "    dplyr::rowwise() %>%\n",
+    "    dplyr::mutate(start = max(TSS - 1e6, 1)) %>%\n",
+    "    dplyr::mutate(end = TSS + 1e6 - 1) %>%\n",
+    "    dplyr::mutate(strand = \"+\") %>%\n",
+    "    dplyr::filter(!is.na(chr)) %>%\n",
+    "    dplyr::mutate(chr = paste0(\"chr\", chr)) %>%\n",
+    "    dplyr::filter(chr %in% paste0(\"chr\", 1:22)) %>%\n",
+    "    makeGRangesFromDataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "37d27afc-30a4-46c6-9fff-be917666c15b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Discarding unchained sequences: chrMT, chrGL000194.1, chrGL000195.1, chrGL000218.1, chrGL000219.1, chrKI270711.1, chrKI270721.1, chrKI270726.1, chrKI270728.1, chrKI270734.1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tss.regions.hg19 <- liftOver(tss.regions, chain) %>%\n",
+    "    unlist() %>%\n",
+    "    as.data.frame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "2d53ed8f-c2a1-4205-9cd5-a569a82f5a7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 6 × 5</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>seqnames</th><th scope=col>start</th><th scope=col>end</th><th scope=col>width</th><th scope=col>strand</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;fct&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>chr6</td><td>28856045</td><td>30856044</td><td>2000000</td><td>+</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>chr6</td><td>28691748</td><td>30691747</td><td>2000000</td><td>+</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>chr6</td><td>28910844</td><td>30910843</td><td>2000000</td><td>+</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>chr6</td><td>28974893</td><td>30974892</td><td>2000000</td><td>+</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>chr6</td><td>30324424</td><td>32324423</td><td>2000000</td><td>+</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>chr6</td><td>30334834</td><td>32334833</td><td>2000000</td><td>+</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 5\n",
+       "\\begin{tabular}{r|lllll}\n",
+       "  & seqnames & start & end & width & strand\\\\\n",
+       "  & <fct> & <int> & <int> & <int> & <fct>\\\\\n",
+       "\\hline\n",
+       "\t1 & chr6 & 28856045 & 30856044 & 2000000 & +\\\\\n",
+       "\t2 & chr6 & 28691748 & 30691747 & 2000000 & +\\\\\n",
+       "\t3 & chr6 & 28910844 & 30910843 & 2000000 & +\\\\\n",
+       "\t4 & chr6 & 28974893 & 30974892 & 2000000 & +\\\\\n",
+       "\t5 & chr6 & 30324424 & 32324423 & 2000000 & +\\\\\n",
+       "\t6 & chr6 & 30334834 & 32334833 & 2000000 & +\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 5\n",
+       "\n",
+       "| <!--/--> | seqnames &lt;fct&gt; | start &lt;int&gt; | end &lt;int&gt; | width &lt;int&gt; | strand &lt;fct&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "| 1 | chr6 | 28856045 | 30856044 | 2000000 | + |\n",
+       "| 2 | chr6 | 28691748 | 30691747 | 2000000 | + |\n",
+       "| 3 | chr6 | 28910844 | 30910843 | 2000000 | + |\n",
+       "| 4 | chr6 | 28974893 | 30974892 | 2000000 | + |\n",
+       "| 5 | chr6 | 30324424 | 32324423 | 2000000 | + |\n",
+       "| 6 | chr6 | 30334834 | 32334833 | 2000000 | + |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  seqnames start    end      width   strand\n",
+       "1 chr6     28856045 30856044 2000000 +     \n",
+       "2 chr6     28691748 30691747 2000000 +     \n",
+       "3 chr6     28910844 30910843 2000000 +     \n",
+       "4 chr6     28974893 30974892 2000000 +     \n",
+       "5 chr6     30324424 32324423 2000000 +     \n",
+       "6 chr6     30334834 32334833 2000000 +     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "head(tss.regions.hg19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "6a2a1b44-e764-4a4d-ba7e-6fb6c5d7e8e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write.table(tss.regions.hg19, \"~/gains_team282/epigenetics/calderon_et_al_hg19/tss_regions_hg19.tsv\", row.names=F, sep=\"\\t\", quote=F)"
    ]
   },
   {
