Updated ATAC Seq and RNA Seq pipelines

--- a/04_Expression/scripts/coexpression_modules.ipynb
+++ b/04_Expression/scripts/coexpression_modules.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "5bd6736b-7057-4557-8b5a-d444a742df76",
    "metadata": {},
    "outputs": [],
@@ -76,10 +76,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1eef8929-8f5c-445d-a8d9-08b478222649",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.7\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "Loading required package: limma\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘igraph’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "    as_data_frame, groups, union\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:purrr’:\n",
+      "\n",
+      "    compose, simplify\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:tidyr’:\n",
+      "\n",
+      "    crossing\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:tibble’:\n",
+      "\n",
+      "    as_data_frame\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "    decompose, spectrum\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:base’:\n",
+      "\n",
+      "    union\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘data.table’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "    between, first, last\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    transpose\n",
+      "\n",
+      "\n",
+      "Loading required package: RcppZiggurat\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘Rfast’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:data.table’:\n",
+      "\n",
+      "    transpose\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:igraph’:\n",
+      "\n",
+      "    knn\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:dplyr’:\n",
+      "\n",
+      "    nth\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:purrr’:\n",
+      "\n",
+      "    is_integer, transpose\n",
+      "\n",
+      "\n",
+      "Loading required package: dynamicTreeCut\n",
+      "\n",
+      "Loading required package: fastcluster\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘fastcluster’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:stats’:\n",
+      "\n",
+      "    hclust\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘WGCNA’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:stats’:\n",
+      "\n",
+      "    cor\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(edgeR)\n",
@@ -97,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "24f4d43d-a1df-4af8-b913-0a5cf53d7ed7",
    "metadata": {},
    "outputs": [],
@@ -115,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "4f0681b6-63ac-44a8-bb08-8e88a18efdad",
    "metadata": {},
    "outputs": [],
@@ -125,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "75ee4fbd-2caa-4749-a1d4-25473613cfb8",
    "metadata": {},
    "outputs": [],
@@ -136,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "79c4479f-2d3c-4c85-a81e-b4f9080c2956",
    "metadata": {},
    "outputs": [
@@ -235,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "07adaa65-23ab-4532-9384-11c4767035a8",
    "metadata": {},
    "outputs": [],
@@ -245,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "9aba4854-0337-4d58-b450-94897badf43f",
    "metadata": {},
    "outputs": [
@@ -347,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "cd0d62de-184b-40b1-bbd3-8b346294a2b5",
    "metadata": {},
    "outputs": [],
@@ -357,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "bb1a49ad-870a-45a4-9933-6c9ce7c3a353",
    "metadata": {},
    "outputs": [],
@@ -367,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "3fd38946-65bb-4d38-a17d-30978cf75c8a",
    "metadata": {},
    "outputs": [
@@ -478,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "52f46eb7-a0d3-4e03-a1f5-c4df5e7152e2",
    "metadata": {},
    "outputs": [],
@@ -495,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "f057b884-5e52-43de-8b75-5a72df4211f5",
    "metadata": {},
    "outputs": [],
@@ -505,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "388abbb1-9c41-42b2-91fb-64f2fff80952",
    "metadata": {},
    "outputs": [
@@ -545,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "990603ad-cb20-4224-8ab7-7dc449552696",
    "metadata": {},
    "outputs": [
@@ -637,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "56a2af9a-e6fa-4551-9a81-33c893c5ed0f",
    "metadata": {},
    "outputs": [],
@@ -647,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "be56ce30-6ef2-4ef0-a4dc-f7ce926b0873",
    "metadata": {},
    "outputs": [
@@ -754,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "35a89dac-bde9-4d08-b876-6ff0c3772e29",
    "metadata": {},
    "outputs": [],
@@ -764,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "8e3c4435-19fb-4238-995b-9408628adab9",
    "metadata": {},
    "outputs": [
@@ -871,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "id": "c9a3304d-48a1-439a-b752-60a4cfc23aac",
    "metadata": {},
    "outputs": [],
@@ -881,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "id": "d026445a-50f4-41e0-8eae-9c0e94044e56",
    "metadata": {},
    "outputs": [
@@ -997,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "id": "ffa0cd1d-4648-4fac-8d03-8a5e2cf4a151",
    "metadata": {},
    "outputs": [],
@@ -1007,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "id": "bceedefe-522d-4a91-aa64-1b3a2f26f726",
    "metadata": {},
    "outputs": [],
@@ -1018,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "id": "737dff14-f89c-4950-bdfe-251257077f03",
    "metadata": {},
    "outputs": [
@@ -1140,17 +1258,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "57dc0b8a-45ad-4b45-bae7-70afc85effa2",
+   "execution_count": 63,
+   "id": "a8e69952-9d3f-42d4-99db-c8e1ef80a04f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "d.mtx <- max(network) - network"
+    "network.2 <- network\n",
+    "diag(network.2) <- max(network.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 64,
+   "id": "57dc0b8a-45ad-4b45-bae7-70afc85effa2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.mtx <- max(network.2) - network.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "id": "1ba06d8f-ed77-45d3-99ab-d06a5a7818c9",
    "metadata": {},
    "outputs": [],
@@ -1160,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 66,
    "id": "9fd59e1b-cfba-4e18-a128-bfacf3f7f1ee",
    "metadata": {},
    "outputs": [
@@ -1259,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 67,
    "id": "762e6a98-671a-4e0f-81fd-2cd62e1c55a2",
    "metadata": {},
    "outputs": [],
@@ -1270,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 68,
    "id": "e01d6e72-a01b-4fbe-b395-dcb1f10ae09c",
    "metadata": {},
    "outputs": [],
@@ -1280,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 69,
    "id": "875d2f08-e1f5-439f-9224-fa1b35e1c85a",
    "metadata": {},
    "outputs": [
