Updated CHEERS and GoShifter

--- a/03_Functional_Interpretation/scripts/cheers_hg19_calderon_et_al.ipynb
+++ b/03_Functional_Interpretation/scripts/cheers_hg19_calderon_et_al.ipynb
@@ -37,23 +37,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "013c6efe-eff9-4ef4-a36c-d3d5fb84dd9e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "Error in parse(text = x, srcfile = src): <text>:4:1: unexpected '}'\n3:     devtools::install_github(\"thomasp85/patchwork\")/nfs/users/nfs_n/nm18/gains_team282/epigenetics/calderon_et_al_hg19/nextflow_work/\n4: }\n   ^\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in parse(text = x, srcfile = src): <text>:4:1: unexpected '}'\n3:     devtools::install_github(\"thomasp85/patchwork\")/nfs/users/nfs_n/nm18/gains_team282/epigenetics/calderon_et_al_hg19/nextflow_work/\n4: }\n   ^\nTraceback:\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required namespace: patchwork\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "if (!requireNamespace(\"patchwork\")) {\n",
     "    install.packages(\"devtools\")\n",
-    "    devtools::install_github(\"thomasp85/patchwork\")/nfs/users/nfs_n/nm18/gains_team282/epigenetics/calderon_et_al_hg19/nextflow_work/\n",
+    "    devtools::install_github(\"thomasp85/patchwork\")\n",
     "}\n",
     "\n",
     "if (!requireNamespace(\"ComplexHeatmap\", quietly=TRUE)) {\n",
