Updated to perform conditional fine mapping

--- a/01_Colocalization/scripts/compare_credibility_sets.ipynb
+++ b/01_Colocalization/scripts/compare_credibility_sets.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "id": "d73910c6-42f3-4f59-92d7-9b6aaec337c1",
    "metadata": {},
    "outputs": [
@@ -46,10 +46,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "id": "6db88ac2-6ac3-494a-ac11-bfcc1ad9408a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.7\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘data.table’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "    between, first, last\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    transpose\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(data.table)\n",
@@ -81,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "5b1989cb-c8f7-48e5-ba50-29ed4cc7fbbb",
    "metadata": {},
    "outputs": [],
@@ -91,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "3d372137-778d-4e00-8c48-3675da2272d9",
    "metadata": {},
    "outputs": [
@@ -169,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "ce7b489c-f229-4c7b-9bcb-74291ffaebc0",
    "metadata": {},
    "outputs": [],
@@ -179,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "86d80355-5b64-412a-835a-24205b20fb76",
    "metadata": {},
    "outputs": [
@@ -257,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "72835ac8-0797-4cb7-902b-755a28ff3b50",
    "metadata": {},
    "outputs": [],
@@ -272,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "91913f26-a966-40ef-b7d2-0392401e4366",
    "metadata": {},
    "outputs": [
@@ -343,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "533cdf0b-b420-4dc3-ae2d-e9836d9ed266",
    "metadata": {},
    "outputs": [],
@@ -359,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "7c5b7a16-300b-481a-ae9e-ccdc1a589fde",
    "metadata": {},
    "outputs": [
@@ -455,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "7443e421-64b8-457b-96b1-891332096a8f",
    "metadata": {},
    "outputs": [
@@ -503,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "a311af72-a99b-4902-907a-3fe12eec11f3",
    "metadata": {},
    "outputs": [
@@ -548,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "c80ce111-953b-49c2-af22-da717ed5336c",
    "metadata": {},
    "outputs": [],
@@ -565,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "id": "bc92f0c9-de70-4c2e-a8d4-41bd32ce0256",
    "metadata": {},
    "outputs": [
@@ -627,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "id": "6a275790-7db9-40fc-bdf4-010e99bfa8ed",
    "metadata": {},
    "outputs": [
@@ -675,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "id": "70ed6806-51d8-4831-8c94-dd0da1a9a01b",
    "metadata": {},
    "outputs": [
@@ -720,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "id": "f39f5b72-cb3e-4f2e-a035-a8eeebd20ded",
    "metadata": {},
    "outputs": [
@@ -767,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "id": "8d0c26c5-ee71-4e3f-9b39-5529f9226f5c",
    "metadata": {},
    "outputs": [],
@@ -784,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 20,
    "id": "b4bb9a1d-7920-4610-b7d1-1dee544b606d",
    "metadata": {},
    "outputs": [
